<resources>
    <string name="app_name">Smart Commuter</string>
    <string name="title_activity_stop_arrival_check">Arrival</string>
    <string name="title_activity_find_ride">Find Ride</string>
    <string name="title_activity_ride_list_view">Result</string>
    <string name="title_activity_nearby_stop">Nearby Stop</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="trimetApiKey">1D72A2E7E55A71C6646AD061E</string>
    <string name="googleApiKey">AIzaSyA8IHKgx_3xnloVW5kH8shDwaw67Mu67Co</string>
    <string name="liftApiKey">roVZU6oVJyhdGGoM/VFKhmyuTmOYvBalKiezPB5PiHiTqsB72/1chvNJ/Zdx/YgvDdKfKiOGSMNBLJbKaXVOyNfj/2cWqAbDzz9gfRh8pA9Av/n0YyUCHbs=</string>
    <string name="uberApiKey">XtW6q7Yu7QSHxAfUhcAQTtbkVemZoHAH7XTeIDqi</string>


    <string name="enter_stop_id_here">Enter Stop ID here</string>
    <string name="current_direction">Current Direction</string>
    <string name="current_location">Current Location</string>
    <string name="detour_information">Detour Information</string>
    <string name="arrive_in">Arrive in:</string>
    <string name="estimated_arrival_time">Estimated Arrival Time</string>
    <string name="fullstreetname">FullStreetName</string>
    <string name="scheduled_arrival_time">Scheduled Arrival Time</string>
    <string name="StopInfoBoxForStreetText">Street</string>
    <string name="StopInfoBoxForTimeText">Time</string>
    <string name="StopInfoBoxForMinsText">mins</string>
    <string name="refreshButton">Refresh</string>
    <string name="stopArrivalSearchButton">Search</string>
    <string name="FindRideButton">Find Ride</string>
    <string name="trimet_arrival_information_title">Stop Arrivals Information:</string>
    <string name="find_Ride_title">Find Ride Information:</string>
    <string name="stop_nearby_checkbox_description">* Search nearby stops</string>
    <string name="trimet_logo_imageVide_description">Trimet Logo</string>
    <string name="lyft_and_uber_imageview_description">lyft and uber logo</string>
    <string name="stop_id_textView">Stop ID</string>
    <string name="distance_textView">Distance</string>
    <string name="duration_textView">Duration</string>
    <string name="sign_textView">Sign</string>
    <string name="nearby_stop_guide_textView">Found Stops (Range 0.5mi) :</string>


</resources>

